// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-duration-field Renders \`c-duration-field\` with custom props 1`] = `
<div
  class="layout row"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active v-label--is-disabled theme--light"
              style="left: 0px; position: absolute;"
            >
              Custom label
            </label>
            <input
              aria-label="Custom label"
              disabled="disabled"
              min="10"
              name="customName.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active v-label--is-disabled theme--light"
              style="left: 0px; position: absolute;"
            >
              Custom units label
            </label>
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma v-select__selection--disabled"
              >
                Week
              </div>
              <input
                aria-label="Custom units label"
                aria-readonly="false"
                autocomplete="on"
                disabled="disabled"
                name="customName.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--clear"
              >
                <i
                  aria-hidden="true"
                  class="v-icon v-icon--disabled v-icon--link material-icons theme--light"
                >
                  clear
                </i>
              </div>
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon v-icon--disabled material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Week
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Month
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with default props 1`] = `
<div
  class="layout row"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Duration
            </label>
            <input
              aria-label="Duration"
              min="1"
              name="duration.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                minute
              </div>
              <input
                aria-readonly="false"
                autocomplete="on"
                name="duration.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              second
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              minute
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              hour
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with duration value as string 1`] = `
<div
  class="layout row"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field v-input--has-state v-input--is-label-active v-input--is-dirty theme--light error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active theme--light error--text"
              style="left: 0px; position: absolute;"
            >
              Duration
            </label>
            <input
              aria-label="Duration"
              min="1"
              name="duration.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
          >
            <div
              class="v-messages__wrapper"
            >
              <div
                class="v-messages__message message-transition-enter message-transition-enter-active"
              >
                The field may only contain numeric characters
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                weeks
              </div>
              <input
                aria-readonly="false"
                autocomplete="on"
                name="duration.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with duration value as undefined 1`] = `
<div
  class="layout row"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label theme--light"
              style="left: 0px; position: absolute;"
            >
              Duration
            </label>
            <input
              aria-label="Duration"
              min="1"
              name="duration.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                weeks
              </div>
              <input
                aria-readonly="false"
                autocomplete="on"
                name="duration.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with errors 1`] = `
<div
  class="layout row"
  value="[object Object]"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Duration
            </label>
            <input
              aria-label="Duration"
              min="1"
              name="customName.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            >
              <div
                class="v-messages__message message-transition-leave message-transition-leave-active"
              >
                Value error
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                minute
              </div>
              <input
                aria-readonly="false"
                autocomplete="on"
                name="customName.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            >
              <div
                class="v-messages__message message-transition-leave message-transition-leave-active"
              >
                Unit error
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with errors 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              second
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              minute
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              hour
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              day
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              week
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              month
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              year
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with long time list 1`] = `
<div
  class="layout row"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Duration
            </label>
            <input
              aria-label="Duration"
              min="1"
              name="duration.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                minute
              </div>
              <input
                aria-readonly="false"
                autocomplete="on"
                name="duration.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with long time list 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              second
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              minute
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              hour
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              day
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              week
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              month
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              year
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-duration-field Renders \`c-duration-field\` with value is greater than the minimum 1`] = `
<div
  class="layout row"
>
  <div
    class="flex pr-3 xs8"
  >
    <div
      class="v-input v-text-field v-input--is-label-active v-input--is-dirty theme--light"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-text-field__slot"
          >
            <label
              aria-hidden="true"
              class="v-label v-label--active theme--light"
              style="left: 0px; position: absolute;"
            >
              Duration
            </label>
            <input
              aria-label="Duration"
              min="100"
              name="duration.value"
              type="number"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex xs4"
  >
    <div
      class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
      role="combobox"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                seconds
              </div>
              <input
                aria-readonly="false"
                autocomplete="on"
                name="duration.unit"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
          </div>
          <div
            class="v-menu"
          />
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light"
          >
            <div
              class="v-messages__wrapper"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
